# c_ext_for_py

./: CMakeLists.txt  build.sh  main.py  setup.py
src/: sum_nanobind.cpp
